--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
-h2 {
+h3 {
   text-align: center;
-  margin-top: 200px;
+  height: 80px;
+  line-height: 80px;
 }
 
 .App table {
@@ -63,4 +64,13 @@ h2 {
   padding: 5px 10px;
   outline: none;
   cursor: pointer;
+}
+
+/* search */
+.App input {
+  margin: 30px auto;
+  padding: 8px;
+  max-width: 800px;
+  min-width: 640px;
+  display: flex;
 }
